--- a/index.textile
+++ b/index.textile
@@ -5,7 +5,7 @@ title: Dallas Geek Night
 
 Come and work on an Open Source project with friends and strangers.  There are plenty of languages, technologies and to choose from that are regularly developed at Geek Night.  Maybe you have an open source project that you're looking for some help with.  Typically we are going to want to do this with pair programming and in a test driven development (TDD) style.
 
-ThoughtWorks pays for pizza and nibbles, and sodas. See "location":location.html for getting to the venue in Addison, North Dallas. 
+ThoughtWorks pays for pizza and nibbles, and sodas. See "getting there":getting-there.html for getting to the venue in Addison, North Dallas. 
 
 Roll up at 5:40pm or later, maybe with your own laptop if you have one. We generally carry on to 9:30pm.
 
