--- a/getting-there.textile
+++ b/getting-there.textile
@@ -15,4 +15,4 @@ There are two parking lots. Enter both off Arapaho Road. Turn immediately right,
 
 h1. Call Paul if lost
 
-Call Paul on 415 999 4637 if you can't find your way to the 6th floor of the office, or which conference room we are in.
+Call Paul on 415 999 4637 if you can't find your way to the 6th floor of the office, or which conference room we are in!
